strip some nice-to-have packages to reduce footprint
Of course emacs is totally awesome, but we really want this
to be as small as possible :-(  It can always be installed
later.  Similarly with other packages.

--- a/kiwi/sles11-sp3/source/config.xml.tmpl
+++ b/kiwi/sles11-sp3/source/config.xml.tmpl
@@ -36,8 +36,6 @@
     <package name='bootsplash-branding-SLES'/>
 
     <package name='acpid'/>
-    <package name='emacs'/>
-    <package name='emacs-x11'/>
     <package name='gcc'/>
     <package name='gdb'/>
     <package name='glibc-locale'/>
@@ -72,7 +70,6 @@
     <package name='telnet'/>
     <package name='terminfo'/>
     <package name='vim'/>
-    <package name='wireshark'/>
     <package name='xorg-x11-fonts'/>
     <package name='xorg-x11-xauth'/>
     <package name='yast2'/>
@@ -84,9 +81,18 @@
     <package name='yast2-qt'/>
     <package name='zypper'/>
 
+    <!-- nice to have but not strictly required -->
+<!--
+    <package name='wireshark'/>
+    <package name='emacs'/>
+    <package name='emacs-x11'/>
+-->
+
     <!-- packages from SDK -->
     <package name='gfxboot-devel' bootinclude='true'/>
+<!--
     <package name='git'/>
+-->
     <package name='ltrace'/>
     <package name='yast2-gtk'/>
 
